@@ -22,6 +22,13 @@ this repository contains the full copyright notices and license terms. -->
             <field name="type">form</field>
             <field name="name">address_form</field>
         </record>
+
+        <record model="ir.ui.view" id="address_view_form_simple">
+            <field name="model">party.address</field>
+            <field name="type">form</field>
+            <field name="name">address_form_simple</field>
+        </record>
+
         <record model="ir.action.act_window" id="act_address_form">
             <field name="name">Addresses</field>
             <field name="res_model">party.address</field>
