@@ -18,7 +18,7 @@ this repository contains the full copyright notices and license terms. -->
     <notebook colspan="6">
         <page string="General" id="general">
             <field name="addresses" mode="form,tree" colspan="4"
-                view_ids="party.address_view_form,party.address_view_tree_sequence"/>
+                view_ids="party.address_view_form_simple,party.address_view_tree_sequence"/>
             <group col="2" colspan="4" id="lang">
                 <label name="lang"/>
                 <field name="lang" widget="selection" xexpand="0"/>
