@@ -1,3 +1,5 @@
+* Add fr_siren and fr_siret identifiers
+* Add optional address to identifiers
 * Add autonomous city as subdivision type for Spain
 * Add support for Python 3.10
 * Remove support for Python 3.6
